lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_index.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Index(
        Index {
            lhs: I64(
                I64Lit {
                    base: Dec,
                    value: "2",
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
            ),
            rhs: Ident(
                Ident {
                    raw: "one",
                    span: Span {
                        start: 2,
                        end: 5,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 6,
            },
        },
    ),
)
