lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_interlaced_calls_and_index-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Index(
        Index {
            lhs: Call(
                Call {
                    callee: Index(
                        Index {
                            lhs: I64(
                                I64Lit {
                                    base: Dec,
                                    value: "2",
                                    span: Span {
                                        start: 0,
                                        end: 1,
                                    },
                                },
                            ),
                            rhs: Ident(
                                Ident {
                                    raw: "one",
                                    span: Span {
                                        start: 2,
                                        end: 5,
                                    },
                                },
                            ),
                            span: Span {
                                start: 0,
                                end: 6,
                            },
                        },
                    ),
                    args: [
                        Ident(
                            Ident {
                                raw: "two",
                                span: Span {
                                    start: 7,
                                    end: 10,
                                },
                            },
                        ),
                        Ident(
                            Ident {
                                raw: "three",
                                span: Span {
                                    start: 12,
                                    end: 17,
                                },
                            },
                        ),
                    ],
                    span: Span {
                        start: 0,
                        end: 18,
                    },
                },
            ),
            rhs: Ident(
                Ident {
                    raw: "four",
                    span: Span {
                        start: 19,
                        end: 23,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 24,
            },
        },
    ),
)
