lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_literal_pattern-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_literal_pattern()
---
Ok(
    Literal(
        String(
            StrLit {
                text: Some(
                    StrText {
                        inner: "hello",
                        span: Span {
                            start: 1,
                            end: 6,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 7,
                },
            },
        ),
    ),
)
