lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_literal_pattern-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_literal_pattern()
---
Ok(
    Literal(
        Char(
            CharLit {
                text: Some(
                    CharText {
                        inner: "h",
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 1,
                            end: 2,
                        },
                    },
                ),
                span: Span {
                    file: FileId(
                        0,
                    ),
                    start: 0,
                    end: 3,
                },
            },
        ),
    ),
)
