lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_literal_pattern-4.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_literal_pattern()
---
Ok(
    Literal(
        Bool(
            BoolLit {
                value: true,
                span: Span {
                    start: 0,
                    end: 4,
                },
            },
        ),
    ),
)
