lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_literal_pattern-5.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_literal_pattern()
---
Ok(
    Literal(
        Nil(
            NilLit {
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
        ),
    ),
)
