lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_literal_pattern.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_literal_pattern()
---
Ok(
    Literal(
        I64(
            I64Lit {
                base: Dec,
                value: "2",
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
        ),
    ),
)
