lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_module.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_module()
---
Ok(
    Module {
        exports: [],
        imports: [],
        statements: [
            Define(
                Define {
                    ident: Ident {
                        raw: "id",
                        span: Span {
                            start: 17,
                            end: 19,
                        },
                    },
                    value: FnDef(
                        FnDef {
                            args: [
                                Ident {
                                    raw: "x",
                                    span: Span {
                                        start: 26,
                                        end: 27,
                                    },
                                },
                            ],
                            body: Ident(
                                Ident {
                                    raw: "x",
                                    span: Span {
                                        start: 32,
                                        end: 33,
                                    },
                                },
                            ),
                            recursive: false,
                            span: Span {
                                start: 23,
                                end: 33,
                            },
                        },
                    ),
                    span: Span {
                        start: 17,
                        end: 34,
                    },
                },
            ),
            Expr(
                ExprStatement {
                    expr: Group(
                        Group {
                            value: Binary(
                                Binary {
                                    lhs: Binary(
                                        Binary {
                                            lhs: Ident(
                                                Ident {
                                                    raw: "id",
                                                    span: Span {
                                                        start: 52,
                                                        end: 54,
                                                    },
                                                },
                                            ),
                                            op: Cpsr,
                                            rhs: Ident(
                                                Ident {
                                                    raw: "id",
                                                    span: Span {
                                                        start: 58,
                                                        end: 60,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 52,
                                                end: 60,
                                            },
                                            op_span: Span {
                                                start: 55,
                                                end: 57,
                                            },
                                        },
                                    ),
                                    op: Cpsr,
                                    rhs: Ident(
                                        Ident {
                                            raw: "id",
                                            span: Span {
                                                start: 64,
                                                end: 66,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 52,
                                        end: 66,
                                    },
                                    op_span: Span {
                                        start: 61,
                                        end: 63,
                                    },
                                },
                            ),
                            span: Span {
                                start: 51,
                                end: 67,
                            },
                        },
                    ),
                    span: Span {
                        start: 51,
                        end: 68,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 81,
        },
    },
)
