lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_nested_group.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    Group(
        Group {
            value: Group(
                Group {
                    value: Group(
                        Group {
                            value: Group(
                                Group {
                                    value: I64(
                                        I64Lit {
                                            base: Dec,
                                            value: "1",
                                            span: Span {
                                                start: 4,
                                                end: 5,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 3,
                                        end: 6,
                                    },
                                },
                            ),
                            span: Span {
                                start: 2,
                                end: 7,
                            },
                        },
                    ),
                    span: Span {
                        start: 1,
                        end: 8,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 9,
            },
        },
    ),
)
