lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_nested_ifs.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    If(
        If {
            cond: IfCond {
                cond: Bool(
                    BoolLit {
                        value: true,
                        span: Span {
                            start: 3,
                            end: 7,
                        },
                    },
                ),
                body: Block {
                    statements: [],
                    value: Some(
                        If(
                            If {
                                cond: IfCond {
                                    cond: Bool(
                                        BoolLit {
                                            value: true,
                                            span: Span {
                                                start: 13,
                                                end: 17,
                                            },
                                        },
                                    ),
                                    body: Block {
                                        statements: [],
                                        value: None,
                                        span: Span {
                                            start: 18,
                                            end: 21,
                                        },
                                    },
                                    span: Span {
                                        start: 10,
                                        end: 21,
                                    },
                                },
                                elif: [],
                                els_: None,
                                span: Span {
                                    start: 10,
                                    end: 21,
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 8,
                        end: 23,
                    },
                },
                span: Span {
                    start: 0,
                    end: 23,
                },
            },
            elif: [
                IfCond {
                    cond: Bool(
                        BoolLit {
                            value: false,
                            span: Span {
                                start: 29,
                                end: 34,
                            },
                        },
                    ),
                    body: Block {
                        statements: [],
                        value: None,
                        span: Span {
                            start: 35,
                            end: 38,
                        },
                    },
                    span: Span {
                        start: 24,
                        end: 38,
                    },
                },
                IfCond {
                    cond: Bool(
                        BoolLit {
                            value: false,
                            span: Span {
                                start: 44,
                                end: 49,
                            },
                        },
                    ),
                    body: Block {
                        statements: [],
                        value: None,
                        span: Span {
                            start: 50,
                            end: 53,
                        },
                    },
                    span: Span {
                        start: 39,
                        end: 53,
                    },
                },
            ],
            els_: Some(
                Else {
                    body: Block {
                        statements: [],
                        value: None,
                        span: Span {
                            start: 59,
                            end: 62,
                        },
                    },
                    span: Span {
                        start: 54,
                        end: 62,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 62,
            },
        },
    ),
)
